--- a/Text.tex
+++ b/Text.tex
@@ -91,7 +91,7 @@ The architecture is a function of every block in the framework. The three blocks
 The origin of these constraints can be either external to the firm or internal. Compliance with stakeholders' demands represents an external constraint, whereas the firm's chosen business model creates an internal constraint. Technological feasibility sits in between because it is determined by forces both outside and inside the firm.
 
 \SubSubSection{Compliance}
-Not all information systems are subject to regulations. Not even all corporate information systems are subject to regulations. Data confidentiality is an important aspect of information security, and under certain circumstances regulatory bodies dictate confidentiality requirements (e.g., HIPAA, FERPA), but systems design from the perspective of information scientists is not necessarily constrained by regulations. Accounting, on the other hand, is primarily regulation driven. The majority of these regulations stipulate the information that a system should collect and communicate. For publicly traded firms in the US, generally accepted accounting principles and the internal revenue code are regulations that strongly influence architecture, but regulatory compliance certainly extends to private companies, as well as companies outside of the US. Frequently, the question is not whether regulatory compliance applies, but rather which regulations constrain the information that the system must generate.
+Not all information systems are subject to regulations. Not even all corporate information systems are subject to regulations. Data confidentiality is an important aspect of information security, and under certain circumstances regulatory bodies dictate confidentiality requirements (e.g., HIPAA, FERPA), but systems design from the perspective of information scientists is not necessarily constrained by regulations. Accounting, on the other hand, is primarily regulation driven. The majority of these regulations stipulate the information that a system should collect and communicate. For publicly traded firms in the US, generally accepted accounting principles (GAAP) and the internal revenue code (IFRS) are regulations that strongly influence architecture, but regulatory compliance certainly extends to private companies, as well as companies outside of the US. Frequently, the question is not whether regulatory compliance applies, but rather which regulations constrain the information that the system must generate.
 
 Compliance also extends beyond regulatory compliance. Other stakeholders may require a system to exhibit certain characteristics. Creditors may request certain reports, or customers may demand specific internal controls before sharing personal or financial information. Although companies may not have a legal obligation to these stakeholders, if a necessary business relationship stipulates how financial information is collected, maintained or communicated, then the information system must reflect those requirements.
 
@@ -206,6 +206,7 @@ The role of security is to control physical and digital access through permissio
 
 Because information security is a high priority, this is the foundation of the Trust Services Framework. Security facilitates the other Trust Services principles. Accountants should have up-to-date knowledge of security protocols, as well as current threats to information security. Although high-profile attacks on Home Depot, Target and other retailers are salient examples of threats, accountants should also know less well-publicized security risks and software vulnerabilities, such as Heartbleed, Shellshock and Venom. The curriculum must constantly evolve to introduce accountants to current threats and technologies. Additionally, accountants should gain hands-on experience with firewalls, permissions, authentication methods, access log analysis, software patching and other security practices.
 
+
 \SubSubSection{Availability}
 In order for an information system to serve any purpose, it must be available. Two threats to availability are downtime and data loss. System downtime results from loss of power or network connectivity or from the need for system maintenance. Data loss can occur because of software or storage corruption, hardware destruction or theft. Although as with other control activities, prevention is good, with respect to availability, the stronger focus is on correction through backups and hardware and network redundancy.
 
@@ -220,6 +221,16 @@ These first three control components are vital to any information system, and wi
 
 \SubSubSection{Confidentiality}
 Information systems frequently contain sensitive information. This information may be legal documents, trade secrets or other forms of intellectual property. Confidentiality protects data from unauthorized uses. The first step in enforcing confidentiality is rights management. All content that is not in the public domain is subject to some license. In order to comply with copyright and copyleft,\footnote{With the advent of open source, organizations have developed content licenses that govern fair use. Copyleft dictates that a work under its license is free and that any derivative works must also be free. For more information, see http://www.gnu.org/copyleft/.} any information acquired or created must have the appropriate rights metadata accessible.\footnote{http://www.copyright.gov/title17/92chap12.html\#1202} Rights metadata lists content owner, license type, permitted uses and license expiration. The next step is to use security tools---permissions, encryption, authentication---as well as disposition when licenses expire to preserve confidentiality. Regulatory and contractual compliance strongly influence confidentiality requirements, and accountants should understand rights management in order to comply with these.
+
+\SubSubSection{Communication is the Mortar}
+Communication serves as the mortar for the conceptual framework. Without the ability for accountants and IT to communicate with efficiency the arch will collapse. Accountants need to be able to communicate with IT professionals who do not have an expertise in accounting language. Accountants also need to be able to have a grasp on the technological language in order to communicate what they want.
+
+The foundation requires communication of whether the company uses GAAP or IFRS, the type of business entity, and if there is technically feasible to view transactions in real time. Both columns clearly require communication to ensure compatibility and what is actually needed. The information portion would be impossible without communication of what is in the columns and foundation. Maintenance is would be impossible if issues with use are not communicated.
+
+When it becomes time to update a block communication of what works with the other blocks in place is essential. If a company is going to buy new hardware is it compatible with the existing software? Communication is not limited to blocks next to each other. Each block must be compatible with the other blocks thus communication connects all blocks together.  
+
+
+
 
 \Section{IV.}{Curriculum Revisions}
 The preceding section introduced the proposed Accounting Architecture model, described the blocks in the model's arch and explained consequent modifications to the curriculum. This section presents two proposals for implementing these revisions into accounting education by identifying specific courses to teach the requisite skills. The first proposal addresses upper-level and graduate courses only, whereas the second proposal builds on the first by suggesting changes to lower-level accounting courses.
